# server/app/Swagger/ColorSchemas.php
@@ -7,8 +7,8 @@ namespace App\Swagger;
  *     schema="Color",
  *     @OA\Property(property="id", type="string", description="ID", example="1"),
  *     @OA\Property(property="name", type="string", description="色名", example="イエロー"),
- *     @OA\Property(property="colorode", type="string", description="色コード", example="#F5B12E"),
- *     @OA\Property(property="order", type="integer", description="ソート順", example="1"),
+ *     @OA\Property(property="colorcode", type="string", description="色コード", example="#F5B12E"),
+ *     @OA\Property(property="order", type="integer", description="ソート順", example=1)
  * )
  */
 
